[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "marimo>=0.22.5",
    "numpy>=2.4.4",
    "plotly>=6.6.0",
    "polars>=1.39.3",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "transformers>=5.5.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]
